Implement ControlFlowCodeBlockBuilder