@@ -1,9 +1,6 @@
 package com.bossymr.rapid.language.flow.builder;
 
-import com.bossymr.rapid.language.builder.ArgumentDescriptor;
-import com.bossymr.rapid.language.builder.Label;
-import com.bossymr.rapid.language.builder.RapidArgumentBuilder;
-import com.bossymr.rapid.language.builder.RapidCodeBlockBuilder;
+import com.bossymr.rapid.language.builder.*;
 import com.bossymr.rapid.language.flow.Argument;
 import com.bossymr.rapid.language.flow.Block;
 import com.bossymr.rapid.language.flow.Field;
@@ -23,9 +20,11 @@ import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.*;
+import java.util.function.BiConsumer;
 import java.util.function.BiFunction;
 import java.util.function.Consumer;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 
 public class ControlFlowCodeBlockBuilder implements RapidCodeBlockBuilder {
 
@@ -44,6 +43,11 @@ public class ControlFlowCodeBlockBuilder implements RapidCodeBlockBuilder {
     }
 
     @Override
+    public @NotNull Variable createVariable(@NotNull String name, @NotNull RapidType type) {
+        return block.createVariable(name, FieldType.VARIABLE, type);
+    }
+
+    @Override
     public @NotNull Variable createVariable(@NotNull RapidField field) {
         RapidType type = Objects.requireNonNullElse(field.getType(), RapidPrimitiveType.ANYTYPE);
         return block.createVariable(field.getName(), field.getFieldType(), type);
@@ -51,7 +55,7 @@ public class ControlFlowCodeBlockBuilder implements RapidCodeBlockBuilder {
 
     @Override
     public @Nullable Argument getArgument(@NotNull String name) {
-        return null;
+        return block.findArgument(name);
     }
 
     @Override
@@ -60,13 +64,13 @@ public class ControlFlowCodeBlockBuilder implements RapidCodeBlockBuilder {
     }
 
     @Override
-    public @Nullable ReferenceExpression getReference(@NotNull RapidReferenceExpression expression) {
+    public @NotNull ReferenceExpression getReference(@NotNull RapidReferenceExpression expression) {
         if (expression.getQualifier() != null) {
             return component(expression);
         }
         RapidSymbol symbol = expression.getSymbol();
         if (symbol == null) {
-            return null;
+            return getAsVariable(any());
         }
         if (symbol instanceof RapidField field) {
             return getFieldReference(expression, field);
@@ -77,25 +81,25 @@ public class ControlFlowCodeBlockBuilder implements RapidCodeBlockBuilder {
         if (symbol instanceof RapidTargetVariable variable) {
             return getVariableReference(expression, variable, block::findVariable);
         }
-        return null;
+        return getAsVariable(any());
     }
 
-    private @Nullable ReferenceExpression getVariableReference(@NotNull RapidReferenceExpression expression, @NotNull RapidVariable parameter, @NotNull Function<@NotNull String, @Nullable Field> function) {
+    private @NotNull ReferenceExpression getVariableReference(@NotNull RapidReferenceExpression expression, @NotNull RapidVariable parameter, @NotNull Function<@NotNull String, @Nullable Field> function) {
         String name = parameter.getName();
         if (name == null) {
-            return null;
+            return getAsVariable(any());
         }
         Field field = function.apply(name);
         if (field == null) {
-            return null;
+            return getAsVariable(any());
         }
         return new VariableExpression(expression, field);
     }
 
-    private @Nullable ReferenceExpression getFieldReference(@NotNull RapidReferenceExpression expression, @NotNull RapidField field) {
+    private @NotNull ReferenceExpression getFieldReference(@NotNull RapidReferenceExpression expression, @NotNull RapidField field) {
         String name = field.getName();
         if (name == null) {
-            return null;
+            return getAsVariable(any());
         }
         RapidType type = Objects.requireNonNullElse(field.getType(), RapidPrimitiveType.ANYTYPE);
         if (field instanceof PhysicalField physicalField) {
@@ -103,14 +107,14 @@ public class ControlFlowCodeBlockBuilder implements RapidCodeBlockBuilder {
             if (routine != null) {
                 Variable variable = block.findVariable(name);
                 if (variable == null) {
-                    return null;
+                    return getAsVariable(any());
                 }
                 return new VariableExpression(expression, variable);
             }
             PhysicalModule module = PhysicalModule.getModule(physicalField);
             String moduleName;
             if (module == null || (moduleName = module.getName()) == null) {
-                return null;
+                return getAsVariable(any());
             }
             return new FieldExpression(expression, type, moduleName, name);
         }
@@ -130,31 +134,28 @@ public class ControlFlowCodeBlockBuilder implements RapidCodeBlockBuilder {
         if (!(index.getType().isAssignable(RapidPrimitiveType.NUMBER))) {
             throw new IllegalArgumentException("Cannot reference index of type: " + index.getType());
         }
-        return new IndexExpression(variable, index);
+        return new IndexExpression(getAsVariable(variable), index);
     }
 
     @Override
-    public @Nullable ReferenceExpression index(@NotNull RapidIndexExpression expression) {
+    public @NotNull ReferenceExpression index(@NotNull RapidIndexExpression expression) {
         if (!(expression.getExpression() instanceof RapidReferenceExpression referenceExpression)) {
-            return null;
+            return getAsVariable(any());
         }
         ReferenceExpression variable = getReference(referenceExpression);
-        if (variable == null) {
-            return null;
-        }
         List<RapidExpression> dimensions = expression.getArray().getDimensions();
         if (dimensions.isEmpty()) {
-            return null;
+            return getAsVariable(any());
         }
         RapidType type = Objects.requireNonNullElseGet(variable.getType(), () -> RapidPrimitiveType.ANYTYPE.createArrayType(dimensions.size()));
         if (type.getDimensions() < dimensions.size()) {
-            return null;
+            return getAsVariable(any());
         }
         List<Expression> expressions = dimensions.stream()
-                .map(this::expression)
-                .toList();
+                                                 .map(expr -> expressionOrError(expr, RapidPrimitiveType.NUMBER))
+                                                 .toList();
         if (expressions.contains(null)) {
-            return null;
+            return getAsVariable(any());
         }
         IndexExpression indexExpression = new IndexExpression(expression, variable, expressions.get(0));
         for (int i = 1; i < expressions.size(); i++) {
@@ -164,36 +165,33 @@ public class ControlFlowCodeBlockBuilder implements RapidCodeBlockBuilder {
     }
 
     @Override
-    public @NotNull ReferenceExpression component(@NotNull ReferenceExpression variable, @NotNull String name) {
+    public @NotNull ReferenceExpression component(@NotNull Expression variable, @NotNull String name) {
         RapidType type = variable.getType();
         if (!(type.getRootStructure() instanceof RapidRecord record)) {
             throw new IllegalArgumentException("Cannot create component expression for variable of type: " + type);
         }
         for (RapidComponent component : record.getComponents()) {
             if (name.equals(component.getName())) {
-                return new ComponentExpression(Objects.requireNonNullElse(component.getType(), RapidPrimitiveType.ANYTYPE), variable, name);
+                return new ComponentExpression(Objects.requireNonNullElse(component.getType(), RapidPrimitiveType.ANYTYPE), getAsVariable(variable), name);
             }
         }
         throw new IllegalArgumentException("Record: " + record.getName() + " does not have a component: " + name);
     }
 
     @Override
-    public @Nullable ReferenceExpression component(@NotNull RapidReferenceExpression expression) {
+    public @NotNull ReferenceExpression component(@NotNull RapidReferenceExpression expression) {
         RapidExpression qualifier = expression.getQualifier();
         if (!(qualifier instanceof RapidReferenceExpression referenceExpression)) {
-            return null;
+            return getAsVariable(any());
         }
         ReferenceExpression variable = getReference(referenceExpression);
-        if (variable == null) {
-            return null;
-        }
         RapidSymbol symbol = expression.getSymbol();
         if (!(symbol instanceof RapidComponent component)) {
-            return null;
+            return getAsVariable(any());
         }
         String name = symbol.getName();
         if (name == null) {
-            return null;
+            return getAsVariable(any());
         }
         RapidType type = Objects.requireNonNullElse(component.getType(), RapidPrimitiveType.ANYTYPE);
         return new ComponentExpression(expression, type, variable, name);
@@ -205,30 +203,41 @@ public class ControlFlowCodeBlockBuilder implements RapidCodeBlockBuilder {
     }
 
     @Override
-    public @Nullable Expression aggregate(@NotNull RapidAggregateExpression expression) {
+    public @NotNull Expression aggregate(@NotNull RapidAggregateExpression expression) {
         RapidType type = expression.getType();
         if (type == null) {
-            return null;
+            return any();
         }
+        RapidType defaultType = type.getDimensions() > 0 ? type.createArrayType(type.getDimensions() - 1) : null;
         List<Expression> expressions = expression.getExpressions().stream()
-                .map(this::expression)
-                .toList();
+                                                 .map(expr -> expressionOrError(expr, defaultType))
+                                                 .collect(Collectors.toList());
         if (type.getDimensions() > 0) {
-            if (expressions.stream().anyMatch(component -> !(type.isAssignable(component.getType().createArrayType(1))))) {
-                return null;
+            // Replace any expressions which are of an invalid type, with an error expression.
+            Objects.requireNonNull(defaultType);
+            for (ListIterator<Expression> iterator = expressions.listIterator(); iterator.hasNext(); ) {
+                Expression expr = iterator.next();
+                if (!(defaultType.isAssignable(expr.getType()))) {
+                    iterator.remove();
+                    iterator.add(any(defaultType));
+                }
             }
         } else if (type.getRootStructure() instanceof RapidRecord record) {
             List<RapidComponent> components = record.getComponents();
             for (int i = 0; i < components.size(); i++) {
-                if (i >= expressions.size()) {
-                    return null;
-                }
                 RapidType componentType = components.get(i).getType();
+                if (i >= expressions.size()) {
+                    // This aggregate is too short, add an error expression of the correct type.
+                    expressions.add(any(componentType));
+                    continue;
+                }
                 if (componentType == null) {
+                    // The component doesn't have a type, we assume that this expression is correct.
                     continue;
                 }
                 if (!(componentType.isAssignable(expressions.get(i).getType()))) {
-                    return null;
+                    // The expression is of a different type.
+                    expressions.set(i, any(componentType));
                 }
             }
         }
@@ -241,10 +250,10 @@ public class ControlFlowCodeBlockBuilder implements RapidCodeBlockBuilder {
     }
 
     @Override
-    public @Nullable Expression literal(@NotNull RapidLiteralExpression expression) {
+    public @NotNull Expression literal(@NotNull RapidLiteralExpression expression) {
         Object value = expression.getValue();
         if (value == null) {
-            return null;
+            return any();
         }
         return new LiteralExpression(expression, value);
     }
@@ -255,20 +264,18 @@ public class ControlFlowCodeBlockBuilder implements RapidCodeBlockBuilder {
     }
 
     @Override
-    public @Nullable Expression binary(@NotNull RapidBinaryExpression expression) {
+    public @NotNull Expression binary(@NotNull RapidBinaryExpression expression) {
+        RapidType type = expression.getType();
+        if (type == null) {
+            return any();
+        }
         IElementType operatorType = expression.getSign().getNode().getElementType();
         BinaryOperator binaryOperator = getBinaryOperator(operatorType);
         if (binaryOperator == null) {
-            return null;
+            return any(type);
         }
-        Expression left = expression(expression.getLeft());
-        if (expression.getRight() == null) {
-            return null;
-        }
-        Expression right = expression(expression.getRight());
-        if (left == null || right == null) {
-            return null;
-        }
+        Expression left = expressionOrError(expression.getLeft());
+        Expression right = expression.getRight() != null ? expressionOrError(expression.getRight()) : any();
         if (EnumSet.of(BinaryOperator.ADD, BinaryOperator.SUBTRACT, BinaryOperator.MULTIPLY, BinaryOperator.DIVIDE, BinaryOperator.INTEGER_DIVIDE, BinaryOperator.MODULO, BinaryOperator.LESS_THAN, BinaryOperator.LESS_THAN_OR_EQUAL, BinaryOperator.GREATER_THAN, BinaryOperator.GREATER_THAN_OR_EQUAL).contains(binaryOperator)) {
             if (left.getType().isAssignable(RapidPrimitiveType.NUMBER) && right.getType().isAssignable(RapidPrimitiveType.NUMBER)) {
                 return new BinaryExpression(expression, binaryOperator, left, right);
@@ -316,13 +323,13 @@ public class ControlFlowCodeBlockBuilder implements RapidCodeBlockBuilder {
                 return doScalarCompute(left, right, BinaryOperator.DIVIDE);
             }
         }
-        return null;
+        return any(type);
     }
 
     private @NotNull Expression doVectorCompute(@NotNull Expression left, @NotNull Expression right, @NotNull BinaryOperator binaryOperator) {
         ReferenceExpression leftVariable = getAsVariable(left);
         ReferenceExpression rightVariable = getAsVariable(right);
-        ReferenceExpression result = getReference(createVariable(RapidPrimitiveType.POSITION));
+        Expression result = getReference(createVariable(RapidPrimitiveType.POSITION));
         assign(component(result, "x"), binary(binaryOperator, component(leftVariable, "x"), component(rightVariable, "x")));
         assign(component(result, "y"), binary(binaryOperator, component(leftVariable, "y"), component(rightVariable, "y")));
         assign(component(result, "z"), binary(binaryOperator, component(leftVariable, "z"), component(rightVariable, "z")));
@@ -343,15 +350,15 @@ public class ControlFlowCodeBlockBuilder implements RapidCodeBlockBuilder {
         ReferenceExpression rightVariable = getAsVariable(right);
         ReferenceExpression result = getReference(createVariable(RapidPrimitiveType.ORIENTATION));
         BiFunction<String, String, Expression> calculate = (leftName, rightName) -> binary(BinaryOperator.MULTIPLY, component(leftVariable, leftName), component(rightVariable, rightName));
-        assign(component(result, "q1"), doCalculate(calculate.apply("q1", "q1"), BinaryOperator.SUBTRACT, calculate.apply("q2", "q2"), BinaryOperator.SUBTRACT, calculate.apply("q3", "q3"), BinaryOperator.SUBTRACT, calculate.apply("q4", "q4")));
-        assign(component(result, "q2"), doCalculate(calculate.apply("q1", "q2"), BinaryOperator.ADD, calculate.apply("q2", "q1"), BinaryOperator.ADD, calculate.apply("q3", "q4"), BinaryOperator.SUBTRACT, calculate.apply("q4", "q3")));
-        assign(component(result, "q3"), doCalculate(calculate.apply("q1", "q3"), BinaryOperator.ADD, calculate.apply("q3", "q1"), BinaryOperator.ADD, calculate.apply("q4", "q2"), BinaryOperator.SUBTRACT, calculate.apply("q2", "q4")));
-        assign(component(result, "q4"), doCalculate(calculate.apply("q1", "q4"), BinaryOperator.ADD, calculate.apply("q4", "q1"), BinaryOperator.ADD, calculate.apply("q2", "q3"), BinaryOperator.SUBTRACT, calculate.apply("q3", "q2")));
+        assign(component(result, "q1"), doCalculate(calculate.apply("q1", "q1"), BinaryOperator.SUBTRACT, calculate.apply("q2", "q2"), BinaryOperator.SUBTRACT, calculate.apply("q3", "q3"), calculate.apply("q4", "q4")));
+        assign(component(result, "q2"), doCalculate(calculate.apply("q1", "q2"), BinaryOperator.ADD, calculate.apply("q2", "q1"), BinaryOperator.ADD, calculate.apply("q3", "q4"), calculate.apply("q4", "q3")));
+        assign(component(result, "q3"), doCalculate(calculate.apply("q1", "q3"), BinaryOperator.ADD, calculate.apply("q3", "q1"), BinaryOperator.ADD, calculate.apply("q4", "q2"), calculate.apply("q2", "q4")));
+        assign(component(result, "q4"), doCalculate(calculate.apply("q1", "q4"), BinaryOperator.ADD, calculate.apply("q4", "q1"), BinaryOperator.ADD, calculate.apply("q2", "q3"), calculate.apply("q3", "q2")));
         return result;
     }
 
-    private @NotNull Expression doCalculate(@NotNull Expression variable1, @NotNull BinaryOperator operator1, @NotNull Expression variable2, @NotNull BinaryOperator operator2, @NotNull Expression variable3, @NotNull BinaryOperator operator3, @NotNull Expression variable4) {
-        return binary(operator3, binary(operator2, binary(operator1, variable1, variable2), variable3), variable4);
+    private @NotNull Expression doCalculate(@NotNull Expression variable1, @NotNull BinaryOperator operator1, @NotNull Expression variable2, @NotNull BinaryOperator operator2, @NotNull Expression variable3, @NotNull Expression variable4) {
+        return binary(BinaryOperator.SUBTRACT, binary(operator2, binary(operator1, variable1, variable2), variable3), variable4);
     }
 
     private @NotNull ReferenceExpression getAsVariable(@NotNull Expression expression) {
@@ -407,19 +414,17 @@ public class ControlFlowCodeBlockBuilder implements RapidCodeBlockBuilder {
     }
 
     @Override
-    public @Nullable Expression unary(@NotNull RapidUnaryExpression expression) {
+    public @NotNull Expression unary(@NotNull RapidUnaryExpression expression) {
+        RapidType type = expression.getType();
+        if (type == null) {
+            return any();
+        }
         IElementType operatorType = expression.getSign().getNode().getElementType();
         UnaryOperator unaryOperator = getUnaryOperator(operatorType);
         if (unaryOperator == null) {
-            return null;
+            return any(type);
         }
-        if (expression.getExpression() == null) {
-            return null;
-        }
-        Expression component = expression(expression.getExpression());
-        if (component == null) {
-            return null;
-        }
+        Expression component = expression.getExpression() != null ? expressionOrError(expression.getExpression()) : any();
         if (unaryOperator == UnaryOperator.NEGATE) {
             if (component.getType().isAssignable(RapidPrimitiveType.NUMBER)) {
                 return new UnaryExpression(expression, unaryOperator, component);
@@ -433,7 +438,7 @@ public class ControlFlowCodeBlockBuilder implements RapidCodeBlockBuilder {
         if (unaryOperator == UnaryOperator.PRESENT) {
             return new UnaryExpression(expression, unaryOperator, component);
         }
-        return null;
+        return any(type);
     }
 
     private @Nullable UnaryOperator getUnaryOperator(@NotNull IElementType elementType) {
@@ -453,30 +458,30 @@ public class ControlFlowCodeBlockBuilder implements RapidCodeBlockBuilder {
         arguments.accept(argumentBuilder);
         Variable variable = createVariable(returnType);
         ReferenceExpression reference = getReference(variable);
-        call(null, routine, reference, result);
+        call(null, expressionOfType(routine, RapidPrimitiveType.STRING), reference, result);
         return reference;
     }
 
     @Override
-    public @Nullable Expression call(@NotNull RapidFunctionCallExpression expression) {
+    public @NotNull Expression call(@NotNull RapidFunctionCallExpression expression) {
         RapidType returnType = expression.getType();
-        if(returnType == null) {
-            return null;
+        if (returnType == null) {
+            return any();
         }
         RapidSymbol symbol = expression.getReferenceExpression().getSymbol();
-        if(!(symbol instanceof RapidRoutine routine)) {
-            return null;
+        if (!(symbol instanceof RapidRoutine)) {
+            return any(returnType);
         }
         String routineName = symbol.getName();
         String moduleName;
-        if(symbol instanceof PhysicalElement element) {
+        if (symbol instanceof PhysicalElement element) {
             PhysicalModule module = PhysicalModule.getModule(element);
             moduleName = module != null ? module.getName() : null;
         } else {
             moduleName = "";
         }
-        if(routineName == null || moduleName == null) {
-            return null;
+        if (routineName == null || moduleName == null) {
+            return any(returnType);
         }
         Map<ArgumentDescriptor, Expression> result = new HashMap<>();
         ControlFlowArgumentBuilder argumentBuilder = new ControlFlowArgumentBuilder(result, this);
@@ -491,47 +496,47 @@ public class ControlFlowCodeBlockBuilder implements RapidCodeBlockBuilder {
         return builder -> {
             List<RapidArgument> arguments = argumentList.getArguments();
             for (RapidArgument argument : arguments) {
-                if(argument instanceof RapidRequiredArgument requiredArgument) {
+                if (argument instanceof RapidRequiredArgument requiredArgument) {
                     RapidExpression value = requiredArgument.getArgument();
-                    builder.withRequiredArgument(Objects.requireNonNullElseGet(expression(value), () -> any(value.getType())));
-                } else if(argument instanceof RapidConditionalArgument conditionalArgument) {
+                    builder.withRequiredArgument(expressionOrError(value));
+                } else if (argument instanceof RapidConditionalArgument conditionalArgument) {
                     RapidSymbol parameter = conditionalArgument.getParameter().getSymbol();
-                    if(!(parameter instanceof RapidParameter parameterSymbol)) {
+                    if (!(parameter instanceof RapidParameter parameterSymbol)) {
                         continue;
                     }
                     RapidExpression value = conditionalArgument.getArgument();
-                    if(!(value instanceof RapidReferenceExpression referenceExpression) || !(referenceExpression.getSymbol() instanceof RapidParameter argumentSymbol)) {
+                    if (!(value instanceof RapidReferenceExpression referenceExpression) || !(referenceExpression.getSymbol() instanceof RapidParameter argumentSymbol)) {
                         continue;
                     }
                     String parameterName = parameterSymbol.getName();
                     String argumentName = argumentSymbol.getName();
-                    if(parameterName == null || argumentName == null) {
+                    if (parameterName == null || argumentName == null) {
                         continue;
                     }
                     Argument argumentValue = getArgument(argumentSymbol.getName());
-                    if(argumentValue == null) {
+                    if (argumentValue == null) {
                         continue;
                     }
                     builder.withConditionalArgument(parameterName, argumentValue);
-                } else if(argument instanceof RapidOptionalArgument optionalArgument) {
+                } else if (argument instanceof RapidOptionalArgument optionalArgument) {
                     RapidSymbol parameter = optionalArgument.getParameter().getSymbol();
-                    if(!(parameter instanceof RapidParameter parameterSymbol)) {
+                    if (!(parameter instanceof RapidParameter parameterSymbol)) {
                         continue;
                     }
                     RapidExpression value = optionalArgument.getArgument();
-                    if(value == null) {
+                    if (value == null) {
                         continue;
                     }
                     String name = parameterSymbol.getName();
-                    if(name == null) {
+                    if (name == null) {
                         continue;
                     }
-                    builder.withOptionalArgument(name, Objects.requireNonNullElseGet(expression(value), () -> any(value.getType())));
+                    builder.withOptionalArgument(name, expressionOrError(value));
                 }
             }
         };
     }
-    
+
     private void call(@Nullable RapidElement element, @NotNull Expression routine, @Nullable ReferenceExpression returnVariable, @NotNull Map<ArgumentDescriptor, Expression> arguments) {
         ArgumentDescriptor.Conditional conditional = getConditionalArgument(arguments);
         if (conditional == null) {
@@ -587,23 +592,116 @@ public class ControlFlowCodeBlockBuilder implements RapidCodeBlockBuilder {
 
     private @Nullable ArgumentDescriptor.Conditional getConditionalArgument(@NotNull Map<ArgumentDescriptor, ?> arguments) {
         return arguments.keySet().stream()
-                .filter(argument -> argument instanceof ArgumentDescriptor.Conditional)
-                .map(argument -> (ArgumentDescriptor.Conditional) argument)
-                .findFirst().orElse(null);
+                        .filter(argument -> argument instanceof ArgumentDescriptor.Conditional)
+                        .map(argument -> (ArgumentDescriptor.Conditional) argument)
+                        .findFirst().orElse(null);
     }
 
     @Override
     public @NotNull Expression any(@Nullable RapidType type) {
-        // TODO: 2023-12-04 Replace usages of method with custom, to provide PsiElement
         return new ErrorExpression(Objects.requireNonNullElse(type, RapidPrimitiveType.ANYTYPE));
     }
 
+    private @NotNull Expression any(@Nullable RapidExpression expression) {
+        if (expression == null) {
+            return any(RapidPrimitiveType.ANYTYPE);
+        } else {
+            return any(expression, expression.getType());
+        }
+    }
+
+    private @NotNull Expression any(@Nullable RapidExpression expression, @Nullable RapidType type) {
+        return new ErrorExpression(expression, Objects.requireNonNullElse(type, RapidPrimitiveType.ANYTYPE));
+    }
+
     @Override
-    public void returnValue(@Nullable RapidReturnStatement statement, @Nullable Expression expression) {
-        builder.continueScope(new ReturnInstruction(block, statement, expression));
+    public @NotNull Expression expression(@NotNull RapidExpression expression) {
+        if (expression instanceof RapidReferenceExpression referenceExpression) {
+            RapidSymbol symbol = referenceExpression.getSymbol();
+            if (symbol instanceof RapidRoutine routine) {
+                String name = routine.getName();
+                String moduleName = "";
+                if (routine instanceof PhysicalRoutine physicalRoutine) {
+                    PhysicalModule module = PhysicalModule.getModule(physicalRoutine);
+                    if (module != null) {
+                        moduleName = module.getName();
+                    }
+                }
+                if (moduleName != null && name != null) {
+                    return literal(moduleName + ":" + name);
+                }
+            }
+            return getReference(referenceExpression);
+        }
+        if (expression instanceof RapidIndexExpression indexExpression) {
+            return index(indexExpression);
+        }
+        if (expression instanceof RapidAggregateExpression aggregateExpression) {
+            return aggregate(aggregateExpression);
+        }
+        if (expression instanceof RapidFunctionCallExpression functionCallExpression) {
+            return call(functionCallExpression);
+        }
+        if (expression instanceof RapidParenthesisedExpression parenthesisedExpression) {
+            RapidExpression component = parenthesisedExpression.getExpression();
+            if (component == null) {
+                return any();
+            }
+            return expression(component);
+        }
+        if (expression instanceof RapidLiteralExpression literalExpression) {
+            return literal(literalExpression);
+        }
+        if (expression instanceof RapidBinaryExpression binaryExpression) {
+            return binary(binaryExpression);
+        }
+        if (expression instanceof RapidUnaryExpression unaryExpression) {
+            return unary(unaryExpression);
+        }
+        return any(expression);
+    }
+
+    public @NotNull Expression expressionOfType(@NotNull Expression expression, @NotNull RapidType type) {
+        if (expression.getType().isAssignable(type)) {
+            return expression;
+        }
+        return any(expression.getElement(), type);
+    }
+
+    private @NotNull Expression expressionOrError(@NotNull RapidExpression expression) {
+        return expression(expression);
+    }
+
+    private @NotNull Expression expressionOrError(@Nullable RapidExpression expression, @Nullable RapidType type) {
+        if (expression == null) {
+            return any(null, type);
+        }
+        Expression expr = expression(expression);
+        if (expr instanceof ErrorExpression) {
+            return any(expression, type);
+        }
+        return expr;
+    }
+
+    @Override
+    public void returnValue(@Nullable Expression expression) {
+        builder.continueScope(new ReturnInstruction(block, null, expression));
         builder.exitScope();
     }
 
+    @Override
+    public void returnValue(@NotNull RapidReturnStatement statement) {
+        RapidExpression returnValue = statement.getExpression();
+        RapidType returnType = block.getReturnType();
+        if (returnType == null) {
+            builder.continueScope(new ReturnInstruction(block, statement, null));
+            builder.exitScope();
+        } else {
+            Expression expression = returnValue != null ? expressionOrError(returnValue, returnType) : any(returnType);
+            builder.continueScope(new ReturnInstruction(block, statement, expression));
+            builder.exitScope();
+        }
+    }
 
     @Override
     public @NotNull Label createLabel(@Nullable String name) {
@@ -624,6 +722,15 @@ public class ControlFlowCodeBlockBuilder implements RapidCodeBlockBuilder {
     }
 
     @Override
+    public @NotNull Label createLabel(@NotNull RapidLabelStatement statement) {
+        String name = statement.getName();
+        if (name == null) {
+            return createLabel();
+        }
+        return createLabel(name);
+    }
+
+    @Override
     public @NotNull Label getLabel(@NotNull String name) {
         if (labels.containsKey(name)) {
             return labels.get(name);
@@ -631,12 +738,6 @@ public class ControlFlowCodeBlockBuilder implements RapidCodeBlockBuilder {
         ControlFlowLabel instruction = new ControlFlowLabel(name);
         labels.put(name, instruction);
         return instruction;
-    }
-
-    @Override
-    public @NotNull RapidCodeBlockBuilder error(@Nullable RapidElement element) {
-        builder.continueScope(new ErrorInstruction(block, element));
-        return this;
     }
 
     @Override
@@ -694,10 +795,27 @@ public class ControlFlowCodeBlockBuilder implements RapidCodeBlockBuilder {
         return this;
     }
 
+    private @NotNull Consumer<RapidCodeBlockBuilder> getBlockConsumer(@Nullable RapidStatementList statementList) {
+        if (statementList == null) {
+            return builder -> {};
+        }
+        return builder -> {
+            for (RapidStatement statement : statementList.getStatements()) {
+                builder.statement(statement);
+            }
+        };
+    }
+
     @Override
-    public @NotNull RapidCodeBlockBuilder loop(@Nullable RapidElement element, @NotNull Expression expression, @NotNull Consumer<RapidCodeBlockBuilder> consumer) {
+    public @NotNull RapidCodeBlockBuilder ifThenElse(@NotNull RapidIfStatement statement) {
+        Expression expression = expressionOrError(statement.getCondition(), RapidPrimitiveType.BOOLEAN);
+        return ifThenElse(expression, getBlockConsumer(statement.getThenBranch()), getBlockConsumer(statement.getElseBranch()));
+    }
+
+    @Override
+    public @NotNull RapidCodeBlockBuilder whileLoop(@NotNull Expression condition, @NotNull Consumer<RapidCodeBlockBuilder> consumer) {
         Label label = createLabel();
-        ifThen(element, expression, thenConsumer -> {
+        ifThen(condition, thenConsumer -> {
             consumer.accept(thenConsumer);
             thenConsumer.goTo(label);
         });
@@ -705,70 +823,268 @@ public class ControlFlowCodeBlockBuilder implements RapidCodeBlockBuilder {
     }
 
     @Override
-    public @NotNull RapidCodeBlockBuilder goTo(@Nullable RapidElement element, @NotNull Label label) {
+    public @NotNull RapidCodeBlockBuilder whileLoop(@NotNull RapidWhileStatement statement) {
+        Label label = createLabel();
+        Expression expression = expressionOrError(statement.getCondition(), RapidPrimitiveType.BOOLEAN);
+        return ifThen(expression, thenBuilder -> {
+            RapidStatementList statementList = statement.getStatementList();
+            if (statementList != null) {
+                for (RapidStatement instruction : statementList.getStatements()) {
+                    thenBuilder.statement(instruction);
+                }
+            }
+            thenBuilder.goTo(label);
+        });
+    }
+
+    @Override
+    public @NotNull RapidCodeBlockBuilder forLoop(@NotNull Expression fromExpression, @NotNull Expression toExpression, @Nullable Expression stepExpression, @NotNull BiConsumer<Variable, RapidCodeBlockBuilder> consumer) {
+        Variable indexVariable = createVariable(RapidPrimitiveType.NUMBER);
+        ReferenceExpression indexExpression = getReference(indexVariable);
+        assign(indexExpression, fromExpression);
+        if (stepExpression == null) {
+            Variable stepVariable = createVariable(RapidPrimitiveType.NUMBER);
+            stepExpression = getReference(stepVariable);
+            ifThenElse(binary(BinaryOperator.LESS_THAN, indexExpression, toExpression),
+                    thenBuilder -> thenBuilder.assign(getReference(stepVariable), thenBuilder.literal(1)),
+                    elseBuilder -> elseBuilder.assign(getReference(stepVariable), elseBuilder.literal(-1)));
+        }
+        Label label = createLabel();
+        Variable breakVariable = createVariable(RapidPrimitiveType.BOOLEAN);
+        ReferenceExpression breakExpression = getReference(breakVariable);
+        ifThenElse(binary(BinaryOperator.LESS_THAN, stepExpression, literal(0)),
+                thenBuilder -> thenBuilder.assign(breakExpression, thenBuilder.binary(BinaryOperator.GREATER_THAN, indexExpression, toExpression)),
+                elseBuilder -> elseBuilder.assign(breakExpression, elseBuilder.binary(BinaryOperator.LESS_THAN, indexExpression, toExpression)));
+        Expression stepVariable = stepExpression;
+        return ifThen(breakExpression,
+                thenBuilder -> {
+                    consumer.accept(indexVariable, thenBuilder);
+                    thenBuilder.assign(indexExpression, binary(BinaryOperator.ADD, indexExpression, stepVariable));
+                    thenBuilder.goTo(label);
+                });
+    }
+
+    @Override
+    public @NotNull RapidCodeBlockBuilder forLoop(@NotNull RapidForStatement statement) {
+        Expression fromExpression = expressionOrError(statement.getFromExpression(), RapidPrimitiveType.NUMBER);
+        Expression toExpression = expressionOrError(statement.getToExpression(), RapidPrimitiveType.NUMBER);
+        Expression stepExpression = statement.getStepExpression() != null ? expressionOrError(statement.getStepExpression(), RapidPrimitiveType.NUMBER) : null;
+        String name = statement.getVariable() != null ? statement.getVariable().getName() : null;
+        return forLoop(fromExpression, toExpression, stepExpression, (variable, builder) -> {
+            variable.setName(name);
+            RapidStatementList statementList = statement.getStatementList();
+            if (statementList != null) {
+                for (RapidStatement instruction : statementList.getStatements()) {
+                    builder.statement(instruction);
+                }
+            }
+            variable.setName(null);
+        });
+    }
+
+    @Override
+    public @NotNull RapidCodeBlockBuilder test(@NotNull Expression condition, @NotNull Consumer<RapidTestBlockBuilder> consumer) {
+        ControlFlowTestBlockBuilder testBlockBuilder = new ControlFlowTestBlockBuilder(this, condition);
+        consumer.accept(testBlockBuilder);
+        return this;
+    }
+
+    @Override
+    public @NotNull RapidCodeBlockBuilder test(@NotNull RapidTestStatement statement) {
+        Expression expression = expressionOrError(statement.getExpression(), RapidPrimitiveType.ANYTYPE);
+        return test(expression, builder -> {
+            for (RapidTestCaseStatement caseStatement : statement.getTestCaseStatements()) {
+                if (caseStatement.isDefault()) {
+                    builder.withDefaultCase(codeBuilder -> {
+                        for (RapidStatement instruction : caseStatement.getStatements().getStatements()) {
+                            codeBuilder.statement(instruction);
+                        }
+                    });
+                } else {
+                    List<RapidExpression> conditions = caseStatement.getExpressions();
+                    List<Expression> expressions;
+                    if (conditions == null) {
+                        expressions = List.of(any(expression.getType()));
+                    } else {
+                        expressions = conditions.stream().map(expr -> expressionOrError(expr, expression.getType())).toList();
+                    }
+                    builder.withCase(expressions, codeBuilder -> {
+                        for (RapidStatement instruction : caseStatement.getStatements().getStatements()) {
+                            codeBuilder.statement(instruction);
+                        }
+                    });
+                }
+            }
+        });
+    }
+
+    @Override
+    public void goTo(@NotNull Label label) {
         if (!(label instanceof ControlFlowLabel instruction)) {
-            throw new IllegalArgumentException();
+            builder.exitScope();
+            return;
         }
         builder.goTo(instruction);
-        return this;
     }
 
     @Override
-    public @NotNull RapidCodeBlockBuilder throwException(@Nullable RapidElement element, @Nullable Expression expression) {
-        builder.continueScope(new ThrowInstruction(block, element, expression));
+    public void goTo(@NotNull RapidGotoStatement statement) {
+        RapidReferenceExpression referenceExpression = statement.getReferenceExpression();
+        if (referenceExpression == null) {
+            builder.exitScope();
+            return;
+        }
+        RapidSymbol symbol = referenceExpression.getSymbol();
+        if (!(symbol instanceof RapidLabelStatement label)) {
+            builder.exitScope();
+            return;
+        }
+        String name = label.getName();
+        if (name == null) {
+            builder.exitScope();
+            return;
+        }
+        Label target = getLabel(name);
+        goTo(target);
+    }
+
+    @Override
+    public void raise(@Nullable Expression expression) {
+        if (expression != null) {
+            expression = expressionOfType(expression, RapidPrimitiveType.NUMBER);
+        }
+        builder.continueScope(new ThrowInstruction(block, null, expression));
         builder.exitScope();
-        return this;
     }
 
     @Override
-    public @NotNull RapidCodeBlockBuilder tryNextInstruction(@Nullable RapidElement element) {
-        builder.continueScope(new TryNextInstruction(block, element));
+    public void raise(@NotNull RapidRaiseStatement statement) {
+        RapidExpression component = statement.getExpression();
+        Expression expression = component != null ? expressionOfType(expressionOrError(component), RapidPrimitiveType.NUMBER) : null;
+        builder.continueScope(new ThrowInstruction(block, statement, expression));
         builder.exitScope();
-        return this;
     }
 
     @Override
-    public @NotNull RapidCodeBlockBuilder exit(@Nullable RapidElement element) {
-        builder.continueScope(new ExitInstruction(block, element));
+    public void tryNext() {
+        builder.continueScope(new TryNextInstruction(block, null));
         builder.exitScope();
-        return this;
     }
 
     @Override
-    public @NotNull RapidCodeBlockBuilder retryInstruction(@Nullable RapidElement element) {
-        builder.continueScope(new RetryInstruction(block, element));
+    public void tryNext(@NotNull RapidTryNextStatement statement) {
+        builder.continueScope(new TryNextInstruction(block, statement));
         builder.exitScope();
+    }
+
+    @Override
+    public void exit() {
+        builder.continueScope(new ExitInstruction(block, null));
+        builder.exitScope();
+    }
+
+    @Override
+    public void exit(@NotNull RapidExitStatement statement) {
+        builder.continueScope(new ExitInstruction(block, statement));
+        builder.exitScope();
+    }
+
+    @Override
+    public void retry() {
+        builder.continueScope(new RetryInstruction(block, null));
+        builder.exitScope();
+    }
+
+    @Override
+    public void retry(@NotNull RapidRetryStatement statement) {
+        builder.continueScope(new RetryInstruction(block, statement));
+        builder.exitScope();
+    }
+
+    @Override
+    public @NotNull RapidCodeBlockBuilder assign(@NotNull ReferenceExpression variable, @NotNull Expression expression) {
+        expression = expressionOfType(expression, variable.getType());
+        builder.continueScope(new AssignmentInstruction(block, null, variable, expression));
         return this;
     }
 
     @Override
-    public @NotNull RapidCodeBlockBuilder assign(@Nullable RapidElement element, @NotNull ReferenceExpression variable, @NotNull Expression expression) {
-        builder.continueScope(new AssignmentInstruction(block, element, builder.createSnapshot(variable), expression));
+    public @NotNull RapidCodeBlockBuilder assign(@NotNull RapidAssignmentStatement statement) {
+        RapidExpression left = statement.getLeft();
+        ReferenceExpression variable = left != null ? getAsVariable(expressionOrError(left)) : getAsVariable(any(RapidPrimitiveType.ANYTYPE));
+        RapidExpression right = statement.getRight();
+        Expression expression = right != null ? expressionOrError(right) : any(variable.getType());
+        expression = expressionOfType(expression, variable.getType());
+        builder.continueScope(new AssignmentInstruction(block, statement, variable, expression));
         return this;
     }
 
     @Override
-    public @NotNull RapidCodeBlockBuilder connect(@Nullable RapidElement element, @NotNull ReferenceExpression variable, @NotNull Expression expression) {
-        builder.continueScope(new ConnectInstruction(block, element, variable, expression));
+    public @NotNull RapidCodeBlockBuilder connect(@NotNull ReferenceExpression variable, @NotNull String routine) {
+        variable = getAsVariable(expressionOfType(variable, RapidPrimitiveType.NUMBER));
+        builder.continueScope(new ConnectInstruction(block, null, variable, new LiteralExpression(routine)));
         return this;
     }
 
     @Override
-    public @NotNull Expression call(@Nullable RapidElement element, @NotNull Expression routine, @NotNull RapidType returnType, @NotNull Consumer<RapidArgumentBuilder> arguments) {
+    public @NotNull RapidCodeBlockBuilder connect(@NotNull RapidConnectStatement statement) {
+        ReferenceExpression variable = getAsVariable(expressionOrError(statement.getLeft(), RapidPrimitiveType.NUMBER));
+        Expression expression = expressionOrError(statement.getRight(), RapidPrimitiveType.STRING);
+        builder.continueScope(new ConnectInstruction(block, statement, variable, expression));
+        return this;
+    }
+
+    @Override
+    public @NotNull RapidCodeBlockBuilder invoke(@NotNull Expression routine, @NotNull Consumer<RapidArgumentBuilder> arguments) {
         Map<ArgumentDescriptor, Expression> result = new HashMap<>();
-        ControlFlowArgumentBuilder builder = new ControlFlowArgumentBuilder(result, this);
-        arguments.accept(builder);
-        ReferenceExpression variable = createVariable(returnType);
-        call(element, routine, variable, result);
-        return variable;
+        ControlFlowArgumentBuilder argumentBuilder = new ControlFlowArgumentBuilder(result, this);
+        arguments.accept(argumentBuilder);
+        routine = expressionOfType(routine, RapidPrimitiveType.STRING);
+        call(null, routine, null, result);
+        return this;
     }
 
     @Override
-    public @NotNull RapidCodeBlockBuilder invoke(@Nullable RapidElement element, @NotNull Expression routine, @NotNull Consumer<RapidArgumentBuilder> arguments) {
+    public @NotNull RapidCodeBlockBuilder invoke(@NotNull RapidProcedureCallStatement statement) {
         Map<ArgumentDescriptor, Expression> result = new HashMap<>();
-        ControlFlowArgumentBuilder builder = new ControlFlowArgumentBuilder(result);
-        arguments.accept(builder);
-        call(element, routine, null, result);
+        ControlFlowArgumentBuilder argumentBuilder = new ControlFlowArgumentBuilder(result, this);
+        getArgumentConsumer(statement.getArgumentList()).accept(argumentBuilder);
+        Expression routine = expressionOrError(statement.getReferenceExpression(), RapidPrimitiveType.STRING);
+        call(null, routine, null, result);
+        return this;
+    }
+
+    @Override
+    public @NotNull RapidCodeBlockBuilder statement(@NotNull RapidStatement statement) {
+        if (statement instanceof RapidReturnStatement returnStatement) {
+            returnValue(returnStatement);
+        } else if (statement instanceof RapidTestStatement testStatement) {
+            test(testStatement);
+        } else if (statement instanceof RapidExitStatement exitStatement) {
+            exit(exitStatement);
+        } else if (statement instanceof RapidRaiseStatement raiseStatement) {
+            raise(raiseStatement);
+        } else if (statement instanceof RapidTryNextStatement tryNextStatement) {
+            tryNext(tryNextStatement);
+        } else if (statement instanceof RapidAssignmentStatement assignmentStatement) {
+            assign(assignmentStatement);
+        } else if (statement instanceof RapidIfStatement ifStatement) {
+            ifThenElse(ifStatement);
+        } else if (statement instanceof RapidConnectStatement connectStatement) {
+            connect(connectStatement);
+        } else if (statement instanceof RapidLabelStatement labelStatement) {
+            createLabel(labelStatement);
+        } else if (statement instanceof RapidProcedureCallStatement procedureCallStatement) {
+            invoke(procedureCallStatement);
+        } else if (statement instanceof RapidRetryStatement retryStatement) {
+            retry(retryStatement);
+        } else if (statement instanceof RapidForStatement forStatement) {
+            forLoop(forStatement);
+        } else if (statement instanceof RapidGotoStatement gotoStatement) {
+            goTo(gotoStatement);
+        } else if (statement instanceof RapidWhileStatement whileStatement) {
+            whileLoop(whileStatement);
+        }
         return this;
     }
 }
